--- a/app/src/main/res/layout/content_repository.xml
+++ b/app/src/main/res/layout/content_repository.xml
@@ -8,4 +8,12 @@
     tools:context=".RepositoryActivity"
     tools:showIn="@layout/activity_repository">
 
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
