--- a/app/src/main/res/layout/content_repository.xml
+++ b/app/src/main/res/layout/content_repository.xml
@@ -8,12 +8,12 @@
     tools:context=".RepositoryActivity"
     tools:showIn="@layout/activity_repository">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
+    <ListView
+        android:id="@+id/covid_list"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="TextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
+    </ListView>
 </androidx.constraintlayout.widget.ConstraintLayout>
